--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,19 @@ jobs:
       with:
         python-version: '3.9'
 
+    - name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '11'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install buildozer
         pip install cython==0.29.33
 
-    - name: Build with Buildozer
+    - name: Install system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y \
@@ -42,7 +48,25 @@ jobs:
             libswscale-dev \
             libavformat-dev \
             libavcodec-dev \
-            zlib1g-dev
+            zlib1g-dev \
+            default-jdk
+
+    - name: Install Android SDK
+      run: |
+        sudo apt-get install -y wget
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        sudo mkdir -p /usr/local/android-sdk/cmdline-tools
+        sudo unzip commandlinetools-linux-9477386_latest.zip -d /usr/local/android-sdk/cmdline-tools
+        sudo mv /usr/local/android-sdk/cmdline-tools/cmdline-tools /usr/local/android-sdk/cmdline-tools/latest
+        export ANDROID_HOME=/usr/local/android-sdk
+        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
+        yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0" "ndk;25.0.8775105"
+
+    - name: Build with Buildozer
+      run: |
+        export ANDROID_HOME=/usr/local/android-sdk
+        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
         buildozer android debug
 
     - name: Upload APK
