--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,25 +48,20 @@ jobs:
             libswscale-dev \
             libavformat-dev \
             libavcodec-dev \
-            zlib1g-dev \
-            default-jdk
+            zlib1g-dev
 
-    - name: Install Android SDK
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+
+    - name: Install Android Build Tools
       run: |
-        sudo apt-get install -y wget
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        sudo mkdir -p /usr/local/android-sdk/cmdline-tools
-        sudo unzip commandlinetools-linux-9477386_latest.zip -d /usr/local/android-sdk/cmdline-tools
-        sudo mv /usr/local/android-sdk/cmdline-tools/cmdline-tools /usr/local/android-sdk/cmdline-tools/latest
-        export ANDROID_HOME=/usr/local/android-sdk
-        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
+        sdkmanager --install "platforms;android-33" "build-tools;33.0.0" "ndk;25.2.9519653"
         yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0" "ndk;25.0.8775105"
 
     - name: Build with Buildozer
+      env:
+        BUILDOZER_WARN_ON_ROOT: 0
       run: |
-        export ANDROID_HOME=/usr/local/android-sdk
-        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
         buildozer android debug
 
     - name: Upload APK
