--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,17 +50,20 @@ jobs:
             libavcodec-dev \
             zlib1g-dev
 
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-
-    - name: Install Android Build Tools
+    - name: Download Android SDK
       run: |
-        sdkmanager --install "platforms;android-33" "build-tools;33.0.0" "ndk;25.2.9519653"
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip commandlinetools-linux-9477386_latest.zip
+        mkdir -p android-sdk/cmdline-tools
+        mv cmdline-tools android-sdk/cmdline-tools/latest
+        export ANDROID_HOME=$PWD/android-sdk
+        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
         yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0" "ndk;25.2.9519653"
 
     - name: Build with Buildozer
       env:
-        BUILDOZER_WARN_ON_ROOT: 0
+        ANDROID_HOME: ${{ github.workspace }}/android-sdk
       run: |
         buildozer android debug
 
