--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install buildozer
+        pip install buildozer==1.5.0
         pip install cython==0.29.33
 
     - name: Install system dependencies
@@ -50,20 +50,29 @@ jobs:
             libavcodec-dev \
             zlib1g-dev
 
-    - name: Download Android SDK
+    - name: Download Android SDK & NDK
       run: |
+        mkdir -p ${GITHUB_WORKSPACE}/android-sdk
+        cd ${GITHUB_WORKSPACE}/android-sdk
         wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
         unzip commandlinetools-linux-9477386_latest.zip
-        mkdir -p android-sdk/cmdline-tools
-        mv cmdline-tools android-sdk/cmdline-tools/latest
-        export ANDROID_HOME=$PWD/android-sdk
-        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
+        mkdir -p cmdline-tools
+        mv cmdline-tools latest
+        mv latest cmdline-tools/
+        export ANDROID_HOME=${GITHUB_WORKSPACE}/android-sdk
+        export PATH=${ANDROID_HOME}/cmdline-tools/latest/bin:${PATH}
         yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0" "ndk;25.2.9519653"
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0"
+        
+        # Download NDK manually
+        wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
+        unzip android-ndk-r25b-linux.zip
+        mv android-ndk-r25b ndk/25.2.9519653
 
     - name: Build with Buildozer
       env:
-        ANDROID_HOME: ${{ github.workspace }}/android-sdk
+        ANDROID_HOME: ${GITHUB_WORKSPACE}/android-sdk
+        ANDROID_NDK_HOME: ${GITHUB_WORKSPACE}/android-sdk/ndk/25.2.9519653
       run: |
         buildozer android debug
 
