--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
             libavcodec-dev \
             zlib1g-dev
 
-    - name: Download Android SDK & NDK
+    - name: Setup Android SDK and Build Tools
       run: |
         mkdir -p ${GITHUB_WORKSPACE}/android-sdk
         cd ${GITHUB_WORKSPACE}/android-sdk
@@ -62,18 +62,30 @@ jobs:
         export ANDROID_HOME=${GITHUB_WORKSPACE}/android-sdk
         export PATH=${ANDROID_HOME}/cmdline-tools/latest/bin:${PATH}
         yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0"
+        sdkmanager --install "platforms;android-33" "build-tools;33.0.0" "platform-tools"
         
-        # Download NDK manually
+        # Verify build-tools installation
+        ls -la ${ANDROID_HOME}/build-tools/33.0.0/
+
+    - name: Download NDK
+      run: |
+        cd ${GITHUB_WORKSPACE}/android-sdk
         wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
         unzip android-ndk-r25b-linux.zip
-        mv android-ndk-r25b ndk/25.2.9519653
+        mkdir -p ndk
+        mv android-ndk-r25b ndk/25b
+
+    - name: Set up environment
+      run: |
+        echo "ANDROID_HOME=${GITHUB_WORKSPACE}/android-sdk" >> $GITHUB_ENV
+        echo "ANDROID_NDK_HOME=${GITHUB_WORKSPACE}/android-sdk/ndk/25b" >> $GITHUB_ENV
+        echo "${GITHUB_WORKSPACE}/android-sdk/platform-tools" >> $GITHUB_PATH
+        echo "${GITHUB_WORKSPACE}/android-sdk/build-tools/33.0.0" >> $GITHUB_PATH
 
     - name: Build with Buildozer
-      env:
-        ANDROID_HOME: ${GITHUB_WORKSPACE}/android-sdk
-        ANDROID_NDK_HOME: ${GITHUB_WORKSPACE}/android-sdk/ndk/25.2.9519653
       run: |
+        export PATH=$PATH:${ANDROID_HOME}/build-tools/33.0.0
+        export BUILDOZER_WARN_ON_ROOT=0
         buildozer android debug
 
     - name: Upload APK
