--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install buildozer==1.5.0
         pip install cython==0.29.33
+        pip install --upgrade urllib3
+        pip install requests
 
     - name: Install system dependencies
       run: |
@@ -50,34 +52,39 @@ jobs:
             libavcodec-dev \
             zlib1g-dev
 
-    - name: Create build directory structure
+    - name: Setup Android SDK
       run: |
-        mkdir -p $HOME/.buildozer/android/platform
         mkdir -p $HOME/.buildozer/android/platform/android-sdk
-        mkdir -p $HOME/.buildozer/android/platform/android-ndk-r25b
-
-    - name: Download and setup Android SDK
-      run: |
-        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip -q commandlinetools-linux-9477386_latest.zip
-        mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
-        mv cmdline-tools $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest
+        cd $HOME/.buildozer/android/platform/android-sdk
+        curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip commandlinetools.zip
+        rm commandlinetools.zip
+        mkdir -p cmdline-tools/latest
+        mv cmdline-tools/* cmdline-tools/latest/
+        rm -r cmdline-tools/latest/cmdline-tools
         export PATH=$HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin:$PATH
-        yes | sdkmanager --licenses --sdk_root=$HOME/.buildozer/android/platform/android-sdk
-        sdkmanager --sdk_root=$HOME/.buildozer/android/platform/android-sdk "platforms;android-33" "build-tools;33.0.0" "platform-tools"
+        yes | ./cmdline-tools/latest/bin/sdkmanager --licenses --sdk_root=$HOME/.buildozer/android/platform/android-sdk
+        ./cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/.buildozer/android/platform/android-sdk "platform-tools" "platforms;android-33" "build-tools;33.0.0"
 
-    - name: Download and setup Android NDK
+    - name: Setup Android NDK
       run: |
-        wget -q https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
-        unzip -q android-ndk-r25b-linux.zip
-        mv android-ndk-r25b/* $HOME/.buildozer/android/platform/android-ndk-r25b/
-        rm -rf android-ndk-r25b
+        cd $HOME/.buildozer/android/platform
+        curl -o android-ndk.zip https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
+        unzip -q android-ndk.zip
+        rm android-ndk.zip
 
     - name: Set environment variables
       run: |
         echo "ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
         echo "ANDROID_NDK_HOME=$HOME/.buildozer/android/platform/android-ndk-r25b" >> $GITHUB_ENV
-        echo "PATH=$HOME/.buildozer/android/platform/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
+        echo "$HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$HOME/.buildozer/android/platform/android-sdk/platform-tools" >> $GITHUB_PATH
+        echo "$HOME/.buildozer/android/platform/android-sdk/build-tools/33.0.0" >> $GITHUB_PATH
+
+    - name: Verify Android SDK installation
+      run: |
+        ls -la $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/
+        $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --version
 
     - name: Build with Buildozer
       env:
