--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,17 +54,27 @@ jobs:
 
     - name: Setup Android SDK
       run: |
+        # Create base directory
         mkdir -p $HOME/.buildozer/android/platform/android-sdk
+
+        # Download and extract SDK tools
         cd $HOME/.buildozer/android/platform/android-sdk
         curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip commandlinetools.zip
+        unzip -q commandlinetools.zip
         rm commandlinetools.zip
-        mkdir -p cmdline-tools/latest
-        mv cmdline-tools/* cmdline-tools/latest/
-        rm -r cmdline-tools/latest/cmdline-tools
-        export PATH=$HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin:$PATH
-        yes | ./cmdline-tools/latest/bin/sdkmanager --licenses --sdk_root=$HOME/.buildozer/android/platform/android-sdk
-        ./cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/.buildozer/android/platform/android-sdk "platform-tools" "platforms;android-33" "build-tools;33.0.0"
+
+        # Create proper directory structure
+        mkdir -p cmdline-tools/tools
+        mv cmdline-tools/* cmdline-tools/tools/ || true
+        rm -rf cmdline-tools/tools/cmdline-tools
+
+        # Set SDK path and install required packages
+        export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+        export PATH=$ANDROID_SDK_ROOT/cmdline-tools/tools/bin:$PATH
+
+        # Accept licenses and install packages
+        yes | sdkmanager --licenses --sdk_root=$ANDROID_SDK_ROOT
+        sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "build-tools;33.0.0"
 
     - name: Setup Android NDK
       run: |
@@ -76,15 +86,16 @@ jobs:
     - name: Set environment variables
       run: |
         echo "ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
+        echo "ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
         echo "ANDROID_NDK_HOME=$HOME/.buildozer/android/platform/android-ndk-r25b" >> $GITHUB_ENV
-        echo "$HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$HOME/.buildozer/android/platform/android-sdk/cmdline-tools/tools/bin" >> $GITHUB_PATH
         echo "$HOME/.buildozer/android/platform/android-sdk/platform-tools" >> $GITHUB_PATH
         echo "$HOME/.buildozer/android/platform/android-sdk/build-tools/33.0.0" >> $GITHUB_PATH
 
     - name: Verify Android SDK installation
       run: |
-        ls -la $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/
-        $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --version
+        ls -la $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/tools/bin/
+        $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/tools/bin/sdkmanager --version
 
     - name: Build with Buildozer
       env:
