--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,12 +62,12 @@ jobs:
 
     - name: Download Android NDK
       run: |
-        mkdir -p $HOME/.buildozer/android/platform/
-        cd $HOME/.buildozer/android/platform/
+        mkdir -p $HOME/.buildozer/android/platform
+        cd $HOME/.buildozer/android/platform
         wget -q https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
         unzip -q android-ndk-r25b-linux.zip
-        mv android-ndk-r25b android-ndk-r25b
         rm android-ndk-r25b-linux.zip
+        echo "NDK_PATH=$HOME/.buildozer/android/platform/android-ndk-r25b" >> $GITHUB_ENV
 
     - name: Create buildozer.spec
       run: |
@@ -86,7 +86,7 @@ jobs:
         android.api = 33
         android.minapi = 21
         android.ndk = r25b
-        android.ndk_path = $HOME/.buildozer/android/platform/android-ndk-r25b
+        android.ndk_path = $NDK_PATH
         android.sdk_path = $ANDROID_SDK_ROOT
         android.build_tools = 33.0.0
         android.accept_sdk_license = True
@@ -96,6 +96,13 @@ jobs:
         log_level = 2
         warn_on_root = 1
         EOF
+
+    - name: Debug Paths
+      run: |
+        echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
+        echo "NDK_PATH: $NDK_PATH"
+        ls -la $HOME/.buildozer/android/platform/
+        ls -la $ANDROID_SDK_ROOT
 
     - name: Build with Buildozer
       env:
